Push vers nouvelle branche

--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ DATABASE_USER=matthieu
 DATABASE_PASSWORD=ned
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-
+ALLOWED_HOSTS=localhost,127.0.0.1
+SECRET_KEY=django-insecure-nef59@!q2@)o4_*gg^y7^!)fo@xg2c=tj7pg9fzwz$4=2rapri
