push gros refactor

--- a/.env
+++ b/.env
@@ -5,3 +5,17 @@ DATABASE_HOST=localhost
 DATABASE_PORT=5432
 ALLOWED_HOSTS=localhost,127.0.0.1
 SECRET_KEY=django-insecure-nef59@!q2@)o4_*gg^y7^!)fo@xg2c=tj7pg9fzwz$4=2rapri
+AXES_FAILURE_LIMIT=5
+AXES_COOLOFF_TIME=15
+AXES_RESET_ON_SUCCESS=True
+JWT_ALLOW_REFRESH=True
+JWT_EXPIRATION_DELTA=1
+CORS_ALLOW_ALL_ORIGINS=true
+LOG_LEVEL=DEBUG
+LOG_FILE=debug.log
+USER_ATTRIBUTE_SIMILARITY_VALIDATOR_MAX_SIMILARITY=0.7
+MINIMUM_LENGTH_VALIDATOR_MIN_LENGTH=9
+CHARACTER_TYPE_VALIDATOR_SPECIAL_CHAR_MIN=1
+SESSION_COOKIE_SECURE=True
+CSRF_COOKIE_SECURE=True
+X_FRAME_OPTIONS='DENY'
