--- a/.env
+++ b/.env
@@ -5,3 +5,17 @@ DATABASE_HOST=localhost
 DATABASE_PORT=5432
 ALLOWED_HOSTS=localhost,127.0.0.1
 SECRET_KEY=django-insecure-nef59@!q2@)o4_*gg^y7^!)fo@xg2c=tj7pg9fzwz$4=2rapri
+AXES_FAILURE_LIMIT=5
+AXES_COOLOFF_TIME=60
+AXES_RESET_ON_SUCCESS=False
+JWT_ALLOW_REFRESH=True
+JWT_EXPIRATION_DELTA=12
+CORS_ALLOW_ALL_ORIGINS=True
+SESSION_COOKIE_SECURE=False
+CSRF_COOKIE_SECURE=False
+X_FRAME_OPTIONS=DENY
+USER_ATTRIBUTE_SIMILARITY_VALIDATOR_MAX_SIMILARITY=0.7
+MINIMUM_LENGTH_VALIDATOR_MIN_LENGTH=8
+CHARACTER_TYPE_VALIDATOR_SPECIAL_CHAR_MIN=1
+LOG_LEVEL=DEBUG
+LOG_FILE=Django.log
